--- a/view/login.html
+++ b/view/login.html
@@ -30,7 +30,7 @@
                 <p><label for="inputEmail" class="sr-only">Email </label>
                     
                     <input type="email" id="inputEmail" class="form-control " placeholder="Email " required=""
-                        autofocus=""><img id="icologin" class="mb-4" src="../img/icologin.png" alt="" width="20" height="20">
+                        autofocus=""><img id="icologin" class="mb-4" src="../img/icologin.png" alt="" >
                     
                     </p>
                        
