--- a/view/login.html
+++ b/view/login.html
@@ -18,7 +18,7 @@
     <body id="body" class="conteainer text-center">
        
 <div id="btnsinf">
-                <button id="btnsuport" type="button" class="btn btn"><img src="../img/icosuoprt.png" alt=" " width="40" height="40"></button>
+                <button id="btnsuport" type="submit" onclick="window.location.href = 'https://wandersondeveloper.github.io/SISTEMA-DE-AGENDAMENTO/view/view/suport.html' "  class="btn btn"><img src="../img/icosuoprt.png" alt=" " width="40" height="40"></button>
                 <button id="btnconf" type="button" class="btn btn"><img src="../img/icoconf.png" alt=" " width="40" height="40"></button>
 </div>
         <div id="card" class="card col-md-6">
@@ -66,6 +66,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+        <script>
+            function btnsuport(){
+                document.getElementById("btnsuport"). 
+            }
+        </script>
 </body>
 
 </html>
