--- a/css/style.css
+++ b/css/style.css
@@ -86,3 +86,9 @@ corpo do site cor de fundo  */
 #btnconf{
     background-color: white;
 }
+
+/* pagina suporte  */
+#bodysuport{
+    background-color:#57A7B3;
+    
+}
