--- a/view/suport.html
+++ b/view/suport.html
@@ -5,13 +5,42 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="../css/style.css">
+<link rel="stylesheet" href="../css/style.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body id="bodysuport">
 
-      <h1>Suporte Técnico </h1>
+      <hr>   
+       <div id="box"> 
+            <b> <P id="texttop">Suporte Técnico</P></b> 
+        </div>
+        <hr>
+       
+
+        <nav class="col col-md-12 text-center ">
+
+            <button id="btntreino" type="button" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" class="btn btn-dark  col-md-2" >Treinamentos</button>
+
+            <button id="btnwhats" type="button" class="btn btn-success  col-md-2">WhatsApp</button>
+
+            <button id="btnchamado" type="button" class="btn btn-primary  col-md-2">solicite um chamdado</button>
+
+
+        </nav>
+        
+<hr>
+       
+          <div class="collapse" id="collapseExample">
+            <div class="card card-body">
+            <!-- conteudo  -->
+            
+            </div>
+            <hr>
+          </div>
+
+
+       
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
