--- a/view/login.html
+++ b/view/login.html
@@ -6,23 +6,32 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+   
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+  
 </head>
 
-
+<nav  id="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
+  
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+       
+        <li  class="nav-item active col-md-12 ">
+            <button id="btnsuport"  type="submit"   class="btn btn col-md-4"><img  src="../img/icosuoprt.png" alt=" " width="40" height="40"><b> Suporte</b></button>
+     
+        </li>
+      </ul>
+    </div>
+  </nav>
 
     <body id="body" class="conteainer text-center">
        
-<div id="btnsinf">
-                <button id="btnsuport" type="submit" onclick="window.location.href = 'https://wandersondeveloper.github.io/SISTEMA-DE-AGENDAMENTO/view/suport.html' "  class="btn btn"><img src="../img/icosuoprt.png" alt=" " width="40" height="40"></button>
-                <button id="btnconf" type="button" class="btn btn"><img src="../img/icoconf.png" alt=" " width="40" height="40"></button>
-</div>
+
         <div id="card" class="card col-md-6">
-            <img id="imglogo" class="mb-4" src="../img/logo.png" alt="" width="200" height="200">
+            <img id="imglogo" class="mb-4" src="../img/logo.png" alt="" width="200" height="200" ondragstart="return false">
             <form class="form-signin">  
 
                 <!-- <h1 class="h3 mb-3 font-weight-normal">SOA</h1> -->
@@ -66,6 +75,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+         <link rel="stylesheet" href="../css/style.css">
        
 </body>
 
