--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,11 @@ corpo do site cor de fundo  */
     background-color: #99CCCC;
     display: block;
     width: 80%;
-    height: 50%;
+    height: 55%;
     margin-left: auto;
     margin-right: auto;
     margin-top:80px;
-   padding-top: 3%;
+   padding-top: 3px;
 
 }
 
@@ -31,12 +31,12 @@ corpo do site cor de fundo  */
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top:10px;
+    margin-top:20px;
 }
 /* logo principal */
 #imglogo {
     
-    margin-top: -95px;
+    margin-top: -125px;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -79,7 +79,17 @@ corpo do site cor de fundo  */
     margin-top: 5%;
     
    /*BTN CONFIGURAÇÃO COR BOTÃO SUPORTE */
+}#btnsuport{
+background-color:white;
+margin: 1%;
+margin-left: auto;
+
+
+    
 }
+
+.navbar-nav{
+height:100px;
 
 /* pagina suporte  */
 #bodysuport{
